# LiveStream

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  TTime.h
.cache/clangd/index/: TTime.cpp.9567076595ACDA60.idx  TTime.h.E2352A01BF0E0B57.idx  TTime_test.cpp.8585CF5B49EB5803.idx
.cursor/rules/: my-custom-rule.mdc
.trae/rules/: project_rules.md
include/: TTiime.h
include/base/: AppInfo.h  Config.h  ConfigManager.h  DomainInfo.h  FileLog.h  FileLogManager.h  LogStream.h  Logger.h  NonCopyable.h  Singleton.h  StringUtils.h  TTime.h  Task.h  TaskManager.h
include/live/: CodecHeader.h  GopMgr.h  LiveService.h  PlayerUser.h  RtmpPlayerUser.h  Session.h  Stream.h  User.h
include/live/base/: CodecUtils.h  TimeCorrector.h
include/mmedia/base/: BytesReader.h  BytesWriter.h  MMediaHandler.h  MMediaLog.h  Packet.h
include/mmedia/rtmp/: RtmpClient.h  RtmpContext.h  RtmpHandShake.h  RtmpHandler.h  RtmpHeader.h  RtmpServer.h
include/mmedia/rtmp/amf/: AMFAny.h  AMFBoolean.h  AMFDate.h  AMFLongString.h  AMFNull.h  AMFNumber.h  AMFObject.h  AMFString.h
include/network/: DnsService.h  TcpClient.h  TcpServer.h  TestContext.h  UdpClient.h  UdpServer.h
include/network/base/: InetAddress.h  MsgBuffer.h  NetWork.h  SocketOpt.h
include/network/net/: Acceptor.h  Connection.h  Event.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  PipeEvent.h  TcpConnection.h  TimingWheel.h  UdpSocket.h
nginx/: README.md  index.html  nginx.conf  start_rtmp_server.sh  stop_rtmp_server.sh
note/: CMakeLists.txt  一些c++编程技巧.md  基础函数库.md  配置文件.md
note/code/: simple_thread_pool_test.cpp
note/【项目实践】1 基础函数库/: baseFunction.md
note/基础文件/: 基础函数库.md
note/基础知识点/: 查漏补缺.md
note/日志库/: 日志库的实现.md
note/线程池/: README.md  线程池实现分析.md
note/网络编程/: RTMP协议详解.md  Reactor模式.md  TCP网络编程.md  UDP服务器执行过程分析.md  套接字地址结构以及地址转换.cpp  网络编程知识点.md  高性能网络编程.md
src/: main.cpp
src/base/: AppInfo.cpp  CMakeLists.txt  Config.cpp  ConfigManager.cpp  DomainInfo.cpp  FileLog.cpp  FileLogManager.cpp  LogStream.cpp  Logger.cpp  StringUtils.cpp  TTime.cpp  Task.cpp  TaskManager.cpp
src/live/: CMakeLists.txt  GopMgr.cpp  LiveService.cpp  PlayerUser.cpp  RtmpPlayerUser.cpp  Session.cpp  Stream.cpp  User.cpp
src/live/base/: CodecHeader.cpp  CodecUtils.cpp  LiveLog.h  TimeCorrector.cpp
src/mmedia/: CMakeLists.txt
src/mmedia/base/: BytesReader.cpp  BytesWriter.cpp  Packet.cpp
src/mmedia/rtmp/: RtmpClient.cpp  RtmpContext.cpp  RtmpHandShake.cpp  RtmpServer.cpp
src/mmedia/rtmp/amf/: AMFAny.cpp  AMFBoolean.cpp  AMFDate.cpp  AMFLongString.cpp  AMFNull.cpp  AMFNumber.cpp  AMFObject.cpp  AMFString.cpp
src/network/: CMakeLists.txt  DnsService.cpp  TcpClient.cpp  TcpServer.cpp  TestContext.cpp  UdpClient.cpp  UdpServer.cpp
src/network/base/: InetAddress.cpp  MsgBuffer.cpp  SocketOpt.cpp
src/network/net/: Acceptor.cpp  Connection.cpp  Event.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  PipeEvent.cpp  TcpConnection.cpp  TimingWheel.cpp  UdpSocket.cpp
test/: CMakeLists.txt  LoggerTest.cpp  SingletonTest.cpp  Singleton_test.cpp  StringUtils_test.cpp  TTimeTest.cpp  TTime_test.cpp  TaskManagerTest.cpp  Test.cpp  TestAcceptor.cpp  TestEvent.cpp  TestEventloopThead.cpp  TestInetAddress.cpp  TestJsoncpp.cpp  TestLogger.cpp  TestSingleton.cpp  TestSocket.cpp  TestStringUtils.cpp  TestTTime.cpp  TestTask.cpp  TestTcpConnection.cpp  TestTcpConnection2.cpp  main.cpp  test.cpp
tests/: CMakeLists.txt
tests/base/: TestLogger.cpp  TestStringUtils.cpp  TestTask.cpp
tests/live/: TestCodecHeader.cpp
tests/network/: TestAcceptor.cpp  TestDnsService.cpp  TestSocket.cpp  TestTcpClient.cpp  TestTcpConnection.cpp  TestTcpServer.cpp  TestUdpClient.cpp  TestUdpServer.cpp
tests/rtmp/: TestHandShakeClient.cpp  TestHandShakeServer.cpp  TestRtmpClient.cpp  TestRtmpServer.cpp
